# opat-core

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  meson.build  meson_options.txt
.github/: pull_request_template.md
.github/pull_request_template/: bug.md  feature.md  hotfix.md
build-config/: meson.build
build-config/PicoSHA2/: meson.build
build-config/boost/: meson.build
build-config/cxxopts/: meson.build
build-config/qhull/: meson.build
docs/: deploy.sh  index.html
docs/cpp/: _2_users_2tboudreaux_2_programming_2opat-core_2opat_i_o-cpp_2src_2private_2fextern_8cpp-example.html  _2_users_2tboudreaux_2_programming_2opat-core_2opat_i_o-cpp_2src_2public_2opat_i_o_8h-example.html  _2_users_2tboudreaux_2_programming_2opat-core_2opat_i_o-cpp_2src_2public_2table_lattice_8h-example.html  annotated.html  annotated_dup.js  class_float_index_vector-members.html  class_float_index_vector.html  class_float_index_vector.js  classes.html  classopat_1_1lattice_1_1_table_lattice-members.html  classopat_1_1lattice_1_1_table_lattice.html  classopat_1_1lattice_1_1_table_lattice.js  classopat_i_o_test.html  classtable_lattice_test.html  dir_408e3e109cd8ba6803532e2e583521a9.html  dir_408e3e109cd8ba6803532e2e583521a9.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_c34d5e8363cf0aa3fabc4f3fad3412a4.html  dir_d49b597d86ed44de6eb8a459f0ed40df.html  dir_d49b597d86ed44de6eb8a459f0ed40df.js  doxygen_crawl.html  examples.html  examples.js  fextern_8cpp.html  fextern_8cpp.js  files.html  fortran_8md.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  hierarchy.js  (+89 more)
docs/cpp/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  (+39 more)
docs/py/: .buildinfo  cpp.html  genindex.html  installation.html  modules.html  objects.inv  opatio.base.header.html  opatio.base.opat.html  opatio.card.datacard.html  opatio.card.html  opatio.catalog.entry.html  opatio.catalog.html  opatio.convert.html  opatio.convert.opal.html  opatio.html  opatio.index.floatvectorindex.html  opatio.index.html  opatio.lattice.html  opatio.lattice.tableLattice.html  opatio.load.html  opatio.load.load.html  opatio.misc.html  opatio.misc.misc.html  opatio.misc.opatentity.html  py-modindex.html  search.html  searchindex.js  usage_guide.html
docs/py/_modules/: index.html
docs/py/_modules/opatio/base/: opat.html
docs/py/_modules/opatio/convert/: opal.html
docs/py/_modules/opatio/index/: floatvectorindex.html
docs/py/_modules/opatio/lattice/: tableLattice.html
docs/py/_modules/opatio/load/: load.html
docs/py/_modules/opatio/misc/: opatentity.html
docs/py/_sources/: installation.rst.txt  modules.rst.txt  opatio.base.opat.rst.txt  opatio.card.rst.txt  opatio.convert.rst.txt  opatio.lattice.rst.txt  opatio.lattice.tableLattice.rst.txt  opatio.misc.misc.rst.txt  opatio.misc.rst.txt  usage_guide.rst.txt
file/: opat.magic
opatIO-JS/: index.html  opatParser.js  readme.md
opatIO-cpp/: Doxyfile  README.md  meson.build
opatIO-cpp/build-config/PicoSHA2/: LICENSE
opatIO-cpp/docs/static/: fortran.md  mainpage.md
opatIO-cpp/examples/: example.cpp  meson.build
opatIO-cpp/src/: meson.build
opatIO-cpp/src/private/: fextern.cpp  indexVector.cpp  opatIO.cpp  tableLattice.cpp
opatIO-cpp/src/public/: indexVector.h  opatIO.h  tableLattice.h
opatIO-cpp/subprojects/googletest-1.15.2/: .meson-subproject-wrap-hash.txt
opatIO-cpp/tests/: GS98hz_new.txt  latticeTest.cpp  meson.build  opatIOTest.cpp  synthetic_tables.opat
opatIO-cpp/tools/: meson.build  opatHeader.cpp  opatInspect.cpp  opatVerify.cpp
opatIO-fortran/: meson.build  readme.md
opatIO-fortran/src/: opat_c_types_module.f90  opatio.f90
opatIO-fortran/tests/sandbox/: meson.build  testRead.f90
opatIO-py/: pyproject.toml  readme.md
opatIO-py/docs/: Makefile
opatIO-py/docs/docs/source/api/: opatio.base.rst  opatio.catalog.entry.rst  opatio.index.rst
opatIO-py/docs/source/: conf.py  opatio.base.header.rst  opatio.catalog.rst  opatio.index.floatvectorindex.rst  opatio.load.load.rst  opatio.load.rst  opatio.misc.opatentity.rst  opatio.rst  usage_guide.rst
opatIO-py/src/opatio/base/: opat.py
opatIO-py/src/opatio/card/: datacard.py
opatIO-py/src/opatio/load/: load.py
opatIO-py/tests/sandbox/: generateTestOPAT.py  gs98hz.opat  latticeTest.py  test.opat
opatIO-py/utils/: mkTestData.py
opatIO-py/utils/testData/: synthetic_tables_OPAT.ascii
specification/: makefile  opat.aux  opat.tex  opat.txt
subprojects/: qhull.wrap
subprojects/packagefiles/qhull/: disable_broken_uninstall_directive.patch  fix_qhull_cpp20_template_support.patch
